Discovered several bugs:     - leaky scope in list comprehension     - calling deprecated method construct_q_p_vec     - other minor things

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -434,10 +434,13 @@
     "class Synchronizer:\n",
     "    \n",
     "    def __init__(self, agents, blackboard):\n",
-    "        self.agents = agents  # list of all agents.  list with elements of class Agent\n",
-    "        self.bb = blackboard  # instance of class blackboard  \n",
+    "        self.agents = agents  # list of all agents. list with elements of class Agent\n",
+    "        self.bb = blackboard  # instance of class blackboard\n",
+    "        \n",
+    "        for agent in agents:\n",
+    "            self.bb.update_q_p_u_dict(agent)\n",
     "    \n",
-    "    def synchronize():\n",
+    "    def synchronize(self):\n",
     "        # run synchronization\n",
     "        for agent in self.agents:\n",
     "            '''     \n",
@@ -453,10 +456,13 @@
     "            # dimensions of p_l are determined by number of states for this agent\n",
     "            # dimensions of p_MF\n",
     "            state_dim_l = len(agent.state_indices)\n",
+    "            \n",
     "            # set difference between all states in all agents, and states in current agent\n",
-    "            state_dim_mf = set([agent_i.state_indices for agent_i in self.agents for agent_i.state_indices in agent_i]) - set(agent.state_indices)\n",
+    "            curr_state_indices = set(agent.state_indices)\n",
+    "            all_state_indices = set([agent_i.state_indices for agent_i in self.agents for agent_i.state_indices in agent_i.state_indices])\n",
+    "            state_dim_mf  = all_state_indices - curr_state_indices\n",
     "\n",
-    "            qp_vec = self.bb.construct_q_p(agent) # quench the necessary values to be quenched\n",
+    "            qpu_vec = agent.qpu_vec # retrieve the qpu_vec\n",
     "            qp_vec = qp_rhs_H_s_nou(qp_vec)\n",
     "            \n",
     "            # compute self.gamma for the agent\n",
@@ -476,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -498,7 +504,7 @@
     "        self.agents=[]\n",
     "        \n",
     "    def update_q_p_u_dict(self, agent):\n",
-    "        '''  This method should be called after propagation of each agent\n",
+    "        '''This method should be called after propagation of each agent\n",
     "        Inputs:\n",
     "            agent (instance of class Agent): this is the agent whose values we are updating\n",
     "        Outputs:\n",
@@ -506,7 +512,7 @@
     "            just update the dictionary, agent_q_p_u_dict.\n",
     "        '''\n",
     "        # Determine which states pertain to this agent and replace the old values with new\n",
-    "\n",
+    "#         import pdb; pdb.set_trace()\n",
     "        for state_ix in agent.state_indices:\n",
     "            self.q_p_u_dict['q_s'][str(state_ix)] = agent.qpu_vec[:agent.state_dim][state_ix-1]\n",
     "            self.q_p_u_dict['p_l'][str(state_ix)] = agent.qpu_vec[agent.state_dim:2*agent.state_dim][state_ix-1]\n",
@@ -538,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -553,7 +559,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myAgent2.state_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -565,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -576,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -591,13 +619,49 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "q_p_u_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "agents = [myAgent, myAgent2]\n",
+    "sync = Synchronizer(agents, bb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "Agent instance has no attribute 'qp_vec'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-83-d70db86759c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msync\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msynchronize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-75-34f2cfb9c85e>\u001b[0m in \u001b[0;36msynchronize\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0mstate_dim_mf\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mall_state_indices\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mcurr_state_indices\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m             \u001b[0mqp_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqp_vec\u001b[0m \u001b[0;31m# quench the necessary values to be quenched\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m             \u001b[0mqp_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqp_rhs_H_s_nou\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqp_vec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: Agent instance has no attribute 'qp_vec'"
+     ]
+    }
+   ],
+   "source": [
+    "sync.synchronize()"
    ]
   },
   {
