Simpliifed the method "synchronize" inside of the class Synchronization:     - removed the unnecessary code for setting the dimensions.  I wrote       that code back when I thought the dimensions of the q p and u vectors       were going to be different for each agent.
This is what was deleted:
            # determine dimensions of p_l and p_MF, and then create
            # dimensions of p_l are determined by number of states for this agent
            # dimensions of p_MF
            state_dim_l = len(agent.state_indices)

            # set difference between all states in all agents, and states in current agent
            curr_state_indices = set(agent.state_indices)
            all_state_indices = set([agent_i.state_indices for agent_i in self.agents for agent_i.state_indices in agent_i.state_indices])
            state_dim_mf  = all_state_indices - curr_state_indices

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
@@ -452,21 +452,14 @@
     "\n",
     "            get quenched values from blackboard\n",
     "            '''\n",
-    "            # determine dimensions of p_l and p_MF, and then create\n",
-    "            # dimensions of p_l are determined by number of states for this agent\n",
-    "            # dimensions of p_MF\n",
-    "            state_dim_l = len(agent.state_indices)\n",
-    "            \n",
-    "            # set difference between all states in all agents, and states in current agent\n",
-    "            curr_state_indices = set(agent.state_indices)\n",
-    "            all_state_indices = set([agent_i.state_indices for agent_i in self.agents for agent_i.state_indices in agent_i.state_indices])\n",
-    "            state_dim_mf  = all_state_indices - curr_state_indices\n",
     "\n",
-    "            qpu_vec = agent.qpu_vec # retrieve the qpu_vec\n",
-    "            qp_vec = qp_rhs_H_s_nou(qp_vec)\n",
+    "#             qpu_vec = agent.qpu_vec # retrieve the qpu_vec, which should already be quenched \n",
+    "            # what makes us think it is already quenched?\n",
+    "#             q_p_u_dict = self.bb.q_p_u_dict\n",
+    "#             qp_vec = qp_rhs_H_s_nou(qp_vec)\n",
     "            \n",
     "            # compute self.gamma for the agent\n",
-    "            agent.compute_gamma() # gets recomputed every time agent is visited\n",
+    "#             agent.compute_gamma() # gets recomputed every time agent is visited\n",
     "            \n",
     "            # run propagation with keyword arguments state_dim_l, state_dim_mf\n",
     "            sliding_window(agent)\n",
@@ -482,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -544,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -559,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -570,7 +563,7 @@
        "[1, 2]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -593,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -604,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -619,7 +612,7 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -642,21 +635,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "Agent instance has no attribute 'qp_vec'",
+     "ename": "TypeError",
+     "evalue": "object of type 'int' has no len()",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-83-d70db86759c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msync\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msynchronize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-75-34f2cfb9c85e>\u001b[0m in \u001b[0;36msynchronize\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0mstate_dim_mf\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mall_state_indices\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mcurr_state_indices\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m             \u001b[0mqp_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqp_vec\u001b[0m \u001b[0;31m# quench the necessary values to be quenched\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m             \u001b[0mqp_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqp_rhs_H_s_nou\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqp_vec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: Agent instance has no attribute 'qp_vec'"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-111-d70db86759c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msync\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msynchronize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-101-bd5eb0bae74d>\u001b[0m in \u001b[0;36msynchronize\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     23\u001b[0m             \u001b[0;31m# dimensions of p_l are determined by number of states for this agent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m             \u001b[0;31m# dimensions of p_MF\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m             \u001b[0mstate_dim_l\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_indices\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m             \u001b[0;31m# set difference between all states in all agents, and states in current agent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
      ]
     }
    ],
@@ -754,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -774,6 +767,7 @@
     "    Outputs:\n",
     "        q_bars, p_bars, u_bars (list of np.arrays): implemented state/costate/control values for entire propagator.\n",
     "    '''\n",
+    "    sliding_window_instance.compute_gamma()\n",
     "    t_0, T, K, q_0, p_0, u_0, state_dim, Gamma, t_terminal = sliding_window_instance.t_0, sliding_window_instance.T, sliding_window_instance.K, sliding_window_instance.q_0, sliding_window_instance.p_0, sliding_window_instance.u_0, sliding_window_instance.state_dim, sliding_window_instance.Gamma, sliding_window_instance.t_terminal\n",
     "    q_ls_bars, p_ls_bars, p_mfs_bars, u_bars = [], [], [], []\n",
     "    t = t_0 # wall clock time\n",
