IMplementing quenching everywhere there is a RHS evaluation.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -452,7 +452,7 @@
     "\n",
     "            get quenched values from blackboard\n",
     "            '''\n",
-    "\n",
+    "            \n",
     "            # run propagation with keyword arguments state_dim_l, state_dim_mf\n",
     "            sliding_window(agent)\n",
     "            "
@@ -629,7 +629,7 @@
    "cell_type": "code",
    "execution_count": 155,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -793,6 +793,9 @@
     "    \n",
     "    # TODO: something seems wrong here.  This is computed identical to p_l_0, which seems very incorrect\n",
     "    p_mf_0 = sliding_window_instance.L_l_q_dot(q_s_0, q_s_dot_0, u_s_0)\n",
+    "    # figure out which state/costate variables are quenched..., \n",
+    "    # ...and then overwrite the values returned by L_l_q_dot with the values from the blackboard\n",
+    "    \n",
     "    # fill in qpu_vec with values from the blackboard, and then assign them to attribute sliding_window_instance\n",
     "    sliding_window_instance.qpu_vec = np.hstack([q_s_0, p_l_0, p_mf_0, u_s_0])\n",
     "    \n",
@@ -802,9 +805,13 @@
     "        #...t_0 will be passed in.  t_0 is the start of the window.\n",
     "\n",
     "        # this propagates a single window\n",
+    "        # inside of propagate dynamics\n",
     "        qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar, u_bar, q_ls, p_ls, p_mfs, us = propagate_dynamics(sliding_window_instance)\n",
     "        # qs, ps, and us will go to Mean Field somehow\n",
     "\n",
+    "        # if quenching, then here you want to overwrite with values from blackboard\n",
+    "        \n",
+    "        \n",
     "        q_ls_bars.append(q_ls_bar)\n",
     "        p_ls_bars.append(p_ls_bar)\n",
     "        p_mfs_bars.append(p_mfs_bar)\n",
