Added a new method to overwrite the values if quenched.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -477,7 +477,6 @@
     "    \n",
     "    def __init__(self):\n",
     "        '''\n",
-    "#         state_agent_mapping is dictionary with keys: object of class Agent, \n",
     "#               values: list of integers state_indices state_indices\n",
     "        q_p_u_dict is a dictionary which maps 'q', 'p', 'u', to a dictionary of index-value pairs: local values for q, p, and u for this agent.  \n",
     "                        blackboard holds all of the most recent local values, e.g.\n",
@@ -589,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
@@ -604,13 +603,15 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "q_p_u_dict"
+    "q_p_u_dict\n",
+    "# this only tells us the values of each state/costate.  Does not tell us which ones correspond to which agent\n",
+    "# state_indices attribute of each agent tells us which states pertain to the agent"
    ]
   },
   {
