A few things to note about recent changes:     - L_mf_q_dot lives inside of the Synchronizer class     - there is no special treatment based on which agent we are quenching for - the function always gets evaluated by just summing over all of the agents.     - mixing_rate can just call L_mf_q_dot for the denominator

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -423,11 +423,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-1-c3c19d7f8b82>, line 33)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-c3c19d7f8b82>\"\u001b[0;36m, line \u001b[0;32m33\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "class Synchronizer:\n",
     "    \n",
@@ -453,7 +462,23 @@
     "            \n",
     "            # run propagation with keyword arguments state_dim_l, state_dim_mf\n",
     "            sliding_window(agent)\n",
-    "            "
+    "\n",
+    "    def L_mf_q_dot(self, q_l, q_l_dot, u_s):\n",
+    "        # is it q_s or q_l here?  It's q_l, because we are evaluating each local Lagrangian\n",
+    "        L_mf_total_q_dot = 0\n",
+    "        for agent in self.agents:\n",
+    "            # evaluate L_q_dot for each of the agents\n",
+    "#             if agent.index == agent_index:\n",
+    "#                 L_q_dot = agent.L_q_dot(q_l, q_l_dot, u_s)    \n",
+    "#             else:\n",
+    "            L_l_q_dot = agent.L_l_q_dot(q_l, q_l_dot, u_s)\n",
+    "            L_mf_total_q_dot = L_mf_total_q_dot + L_l_q_dot\n",
+    "            \n",
+    "        return L_mf_total_q_dot\n",
+    "    \n",
+    "    def mixing_rate(self, q_l, q_l_dot, u_s):\n",
+    "        # \n",
+    "    "
    ]
   },
   {
@@ -465,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -525,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -540,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -551,7 +576,7 @@
        "[1, 2]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,17 +646,6 @@
    "source": [
     "agents = [myAgent, myAgent2]\n",
     "sync = Synchronizer(agents, bb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# sync.synchronize()"
    ]
   },
   {
@@ -727,11 +741,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'qpu_vec' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-40-26b28b194d7d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mus\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mqpu_vec2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bar2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_ss2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mus2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'qpu_vec' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us\n",
     "\n",
@@ -757,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -794,11 +820,15 @@
     "    q_l_D_dot_0 = q_s_dot_0\n",
     "    q_l_D_0 = q_s_0\n",
     "    \n",
+    "    \n",
     "    # set initial conditions using values from blackboard retrieved above\n",
     "    p_l_0 = sliding_window_instance.L_l_q_dot(q_s_0, q_s_dot_0, u_s_0) # compute using Dirac compatibility\n",
     "    p_l_D_0 = sliding_window_instance.L_l_D_q_Dot(q_l_D_0, q_l_D_dot_0) # compute using Dirac compatibility\n",
     "    \n",
     "    # TODO: something seems wrong here.  This is computed identical to p_l_0, which seems very incorrect\n",
+    "    # Setup initial conditions for\n",
+    "    # construct L_mf\n",
+    "#     L_mf = \n",
     "    p_mf_0 = sliding_window_instance.L_l_q_dot(q_s_0, q_s_dot_0, u_s_0)\n",
     "    # figure out which state/costate variables are quenched..., \n",
     "    # ...and then overwrite the values returned by L_l_q_dot with the values from the blackboard\n",
