--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -423,20 +423,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-1-c3c19d7f8b82>, line 33)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-c3c19d7f8b82>\"\u001b[0;36m, line \u001b[0;32m33\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Synchronizer:\n",
     "    \n",
@@ -468,16 +459,16 @@
     "        L_mf_total_q_dot = 0\n",
     "        for agent in self.agents:\n",
     "            # evaluate L_q_dot for each of the agents\n",
-    "#             if agent.index == agent_index:\n",
-    "#                 L_q_dot = agent.L_q_dot(q_l, q_l_dot, u_s)    \n",
-    "#             else:\n",
     "            L_l_q_dot = agent.L_l_q_dot(q_l, q_l_dot, u_s)\n",
     "            L_mf_total_q_dot = L_mf_total_q_dot + L_l_q_dot\n",
     "            \n",
     "        return L_mf_total_q_dot\n",
     "    \n",
-    "    def mixing_rate(self, q_l, q_l_dot, u_s):\n",
-    "        # \n",
+    "    def mixing_rate(self, q_l, q_l_dot, u_s, agent_index):\n",
+    "        agent = filter(lambda: agent.index == agent.index, self.agents)[0]\n",
+    "        L_l_q_dot = agent.L_l_q_dot(q_l, q_l_dot, u_s)\n",
+    "        L_mf_total_q_dot = self.L_mf_total_q_dot(q_l, q_l_dot, u_s)\n",
+    "        return L_l_q_dot/L_mf_total_q_dot\n",
     "    "
    ]
   },
