Added a few methods for computing H_MF_u for Agent1:     - this shows that the number of methods for H_mf_u will still need to match the number of control variables     - But the method called by cdi will still be H_MF_u.  This just means that it will

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -196,7 +196,14 @@
     "        return 1\n",
     "\n",
     "    def H_MF_u(self, q_s, p_mf, u_s):\n",
+    "        # length of u_s must match number of terms here\n",
+    "        return self.H_MF_u_1(q_s, p_mf, u_s)*u_s[0] + self.H_MF_u_2(q_s, p_mf, u_s)*u_s[1]\n",
+    "\n",
+    "    def H_MF_u_1(self, q_s, p_mf, u_s):\n",
     "        return 1\n",
+    "    \n",
+    "    def H_MF_u_2(self, q_s, p_mf, u_s):\n",
+    "        return 2\n",
     "        \n",
     "    def qp_rhs_H_mf(self, q_s, p_mf, u_s):\n",
     "        # remember that we want to propagate as much as possible together in the same rhs function for numerical purposes\n",
@@ -209,7 +216,7 @@
     "        return self.q_rhs_H_mf_nou(q_s, p_mf) + sum([self.q_rhs_H_mf_u(q_s, p_mf)*u_i for u_i in u_s])\n",
     "        \n",
     "    def q_rhs_H_mf_u(self, q_s, p_mf):\n",
-    "        # there should be one of these for each control variable\n",
+    "        # there should be one of these methods for EACH control variable\n",
     "        p_H_mf_u_dot_1 = q_s + p_mf # or something\n",
     "        return np.concatenate([p_H_mf_u_dot_1])\n",
     "    \n",
@@ -460,15 +467,26 @@
     "        for agent in self.agents:\n",
     "            # evaluate L_q_dot for each of the agents\n",
     "            L_l_q_dot = agent.L_l_q_dot(q_l, q_l_dot, u_s)\n",
-    "            L_mf_total_q_dot = L_mf_total_q_dot + L_l_q_dot\n",
+    "            L_mf_total_q_dot = L_mf_total_q_dot + abs(L_l_q_dot)\n",
     "            \n",
     "        return L_mf_total_q_dot\n",
+    "\n",
+    "# *** mixing_rate will be given as input ***\n",
+    "#     def mixing_rate(self, q_l, q_l_dot, u_s, agent_index):\n",
+    "#         agent = filter(lambda: agent.index == agent.index, self.agents)[0]\n",
+    "#         L_l_q_dot = agent.L_l_q_dot(q_l, q_l_dot, u_s)\n",
+    "#         L_mf_total_q_dot = self.L_mf_total_q_dot(q_l, q_l_dot, u_s)\n",
+    "#         return L_l_q_dot/L_mf_total_q_dot\n",
     "    \n",
-    "    def mixing_rate(self, q_l, q_l_dot, u_s, agent_index):\n",
-    "        agent = filter(lambda: agent.index == agent.index, self.agents)[0]\n",
-    "        L_l_q_dot = agent.L_l_q_dot(q_l, q_l_dot, u_s)\n",
-    "        L_mf_total_q_dot = self.L_mf_total_q_dot(q_l, q_l_dot, u_s)\n",
-    "        return L_l_q_dot/L_mf_total_q_dot\n",
+    "    def H_mf(self, q_s, p_mf, u_s, agent_index):\n",
+    "        # start with H_mf = H_mf_no_u, and then add H_mf_u\n",
+    "        H_mf = agent.H_mf_no_u(q_s, p_mf, u_s, agent_index)\n",
+    "        for agent in self.agents:\n",
+    "            # evaluate H_mf_u for each of the agents\n",
+    "            H_mf_u = agent.H_mf_u(q_s, p_mf)*u_s\n",
+    "            H_mf = H_mf + H_mf_u\n",
+    "         \n",
+    "        return H_mf\n",
     "    "
    ]
   },
