I realized something very important about the inputs to the mf equations:     - The q_mf, q_mf_dot, and u_mf that are passed to the L_mf and H_mf are vectors containing states/controls for ALL of the agents (i.e. all states/controls for entire system).  These are used for quenching.  Some of the elements in those vectors are going to be quenched.     - the q_s, q_s_dot, and u_s that are passed into local L_l and H_l..etc., are of the dimensions ONLY for the current agent, and they are not quenched.     - p_l, and p_mf are NEVER quenched.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -186,7 +186,6 @@
     "        # iterate through agents in the blackboard\n",
     "        qp_vec = kwargs['qp_vec']\n",
     "        \n",
-    "        \n",
     "        self.gamma\n",
     "        u_dot = -1*self.Gamma*(self.gamma)\n",
     "        return u_dot\n",
@@ -196,7 +195,10 @@
     "        return 1\n",
     "\n",
     "    def H_MF_u(self, q_s, p_mf, u_s):\n",
+    "        # q_s, p_mf, u_s are vectors for ALL of the states, costates, and controls\n",
+    "        # \n",
     "        # length of u_s must match number of terms here\n",
+    "        # some of the elements in u_s are quenched \n",
     "        return self.H_MF_u_1(q_s, p_mf, u_s)*u_s[0] + self.H_MF_u_2(q_s, p_mf, u_s)*u_s[1]\n",
     "\n",
     "    def H_MF_u_1(self, q_s, p_mf, u_s):\n",
@@ -304,7 +306,7 @@
     "        return 1\n",
     "    \n",
     "    def L_l_q_dot(self, q_s, q_s_dot, u_s):\n",
-    "        return q_l\n",
+    "        return q_s\n",
     "    \n",
     "    def H_l_nou(self, q_s, p_l, lambda_l):\n",
     "        return 1\n",
@@ -461,11 +463,17 @@
     "            # run propagation with keyword arguments state_dim_l, state_dim_mf\n",
     "            sliding_window(agent)\n",
     "\n",
-    "    def L_mf_q_dot(self, q_l, q_l_dot, u_s):\n",
-    "        # is it q_s or q_l here?  It's q_l, because we are evaluating each local Lagrangian\n",
+    "    def L_mf_q_dot(self, q_mf, q_mf_dot, u_mf):\n",
+    "        # q_mf_dot, q_mf (inputs) here will be vectors of ALL of the states\n",
+    "        # q_mf_dot u_mf is a vector of ALL of the controls\n",
     "        L_mf_total_q_dot = 0\n",
     "        for agent in self.agents:\n",
-    "            # evaluate L_q_dot for each of the agents\n",
+    "            # Evaluate L_q_dot for each of the agents\n",
+    "            # Remember L_l_q_dot only takes in the local variables.  So, need to know the indices in q_mf which correspond to \n",
+    "            #...the states pertaining to this agent \n",
+    "            q_l = # subset of q_mf\n",
+    "            q_l_dot = # subset of q_mf_dot\n",
+    "            u_s = # subset of u_mf\n",
     "            L_l_q_dot = agent.L_l_q_dot(q_l, q_l_dot, u_s)\n",
     "            L_mf_total_q_dot = L_mf_total_q_dot + abs(L_l_q_dot)\n",
     "            \n",
