Removing the method for overwriting q and p values, because that was the wrong way to quench.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -705,6 +705,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Agent instance at 0x104c87758>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myAgent"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "collapsed": false
